prusti-tests/tests/verify/ui/pledges.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/pledges.rs:34:5
   |
34 |     assert!(a.f == 6);
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

